# embody

./: AUTHORS  ChangeLog  INSTALL  Makefile.in  README  config.mk.in  configure.ac  embody.pc.in
debian/: README  changelog  control  copyright  rules
include/: container.h  default_types.h  embody.h  type.h
src/: Makefile.in  container.c  default_types.c  embody.c  hash_table.c  hash_table.h  type.c
t/: Makefile.in  container.t.c  default_types.t.c  embody.t.c  string.t.c  type.t.c  zz-memcheck.t
